Aplica stil uniform la toate cele 3 proiecte: mappers, Scanner, toList, HTML simplu
- Adauga clase mapper (@Component) la problema2-inchirieri si problema3-clinica
- Inlocuieste BufferedReader/ClassPathResource cu Scanner in toate DataLoader-ele
- Inlocuieste .collect(Collectors.toList()) cu .toList() in toate serviciile
- Elimina Bootstrap si inlocuieste cu HTML simplu in toate template-urile

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>