@@ -1,24 +1,26 @@
 package com.exam.clinica.service;
 
 import com.exam.clinica.dto.MedicDTO;
+import com.exam.clinica.mapper.MedicMapper;
 import com.exam.clinica.model.Medic;
 import com.exam.clinica.repository.MedicRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class MedicService {
 
     private final MedicRepository medicRepository;
+    private final MedicMapper medicMapper;
 
-    public MedicService(MedicRepository medicRepository) {
+    public MedicService(MedicRepository medicRepository, MedicMapper medicMapper) {
         this.medicRepository = medicRepository;
+        this.medicMapper = medicMapper;
     }
 
     public List<MedicDTO> getAll() {
-        return medicRepository.findAll().stream().map(this::toDTO).collect(Collectors.toList());
+        return medicRepository.findAll().stream().map(medicMapper::toDTO).toList();
     }
 
     public Medic findById(Long id) {
@@ -27,13 +29,5 @@ public class MedicService {
 
     public void salveaza(Medic m) {
         medicRepository.save(m);
-    }
-
-    private MedicDTO toDTO(Medic m) {
-        MedicDTO dto = new MedicDTO();
-        dto.setId(m.getId());
-        dto.setNume(m.getNume());
-        dto.setSpecialitate(m.getSpecialitate());
-        return dto;
     }
 }
