@@ -2,6 +2,8 @@ package com.exam.clinica.service;
 
 import com.exam.clinica.dto.NotificareDTO;
 import com.exam.clinica.dto.ProgramareDTO;
+import com.exam.clinica.mapper.NotificareMapper;
+import com.exam.clinica.mapper.ProgramareMapper;
 import com.exam.clinica.model.Medic;
 import com.exam.clinica.model.Notificare;
 import com.exam.clinica.model.Programare;
@@ -10,9 +12,7 @@ import com.exam.clinica.repository.NotificareRepository;
 import com.exam.clinica.repository.ProgramareRepository;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProgramareService {
@@ -20,21 +20,27 @@ public class ProgramareService {
     private final ProgramareRepository programareRepository;
     private final NotificareRepository notificareRepository;
     private final MedicService medicService;
+    private final ProgramareMapper programareMapper;
+    private final NotificareMapper notificareMapper;
 
     public ProgramareService(ProgramareRepository programareRepository,
                              NotificareRepository notificareRepository,
-                             MedicService medicService) {
+                             MedicService medicService,
+                             ProgramareMapper programareMapper,
+                             NotificareMapper notificareMapper) {
         this.programareRepository = programareRepository;
         this.notificareRepository = notificareRepository;
         this.medicService = medicService;
+        this.programareMapper = programareMapper;
+        this.notificareMapper = notificareMapper;
     }
 
     public List<ProgramareDTO> getAll() {
-        return programareRepository.findAll().stream().map(this::toDTO).collect(Collectors.toList());
+        return programareRepository.findAll().stream().map(programareMapper::toDTO).toList();
     }
 
     public List<ProgramareDTO> getByEmail(String email) {
-        return programareRepository.findByPacientEmail(email).stream().map(this::toDTO).collect(Collectors.toList());
+        return programareRepository.findByPacientEmail(email).stream().map(programareMapper::toDTO).toList();
     }
 
     public List<ProgramareDTO> filter(String email, String status, String medicNume) {
@@ -42,8 +48,8 @@ public class ProgramareService {
                 .filter(p -> email == null || email.isBlank() || p.getPacientEmail().equalsIgnoreCase(email))
                 .filter(p -> status == null || status.isBlank() || p.getStatus().name().equalsIgnoreCase(status))
                 .filter(p -> medicNume == null || medicNume.isBlank() || p.getMedic().getNume().toLowerCase().contains(medicNume.toLowerCase()))
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+                .map(programareMapper::toDTO)
+                .toList();
     }
 
     public void adauga(ProgramareDTO dto) {
@@ -69,31 +75,10 @@ public class ProgramareService {
     }
 
     public List<NotificareDTO> getNotificari(String email) {
-        return notificareRepository.findByPacientEmailOrderByDataDesc(email).stream().map(n -> {
-            NotificareDTO dto = new NotificareDTO();
-            dto.setId(n.getId());
-            dto.setPacientEmail(n.getPacientEmail());
-            dto.setMesaj(n.getMesaj());
-            dto.setData(n.getData());
-            return dto;
-        }).collect(Collectors.toList());
+        return notificareRepository.findByPacientEmailOrderByDataDesc(email).stream().map(notificareMapper::toDTO).toList();
     }
 
     public void salveaza(Programare p) {
         programareRepository.save(p);
-    }
-
-    private ProgramareDTO toDTO(Programare p) {
-        ProgramareDTO dto = new ProgramareDTO();
-        dto.setId(p.getId());
-        dto.setPacientNume(p.getPacientNume());
-        dto.setPacientEmail(p.getPacientEmail());
-        dto.setMedicId(p.getMedic().getId());
-        dto.setMedicNume(p.getMedic().getNume());
-        dto.setMedicSpecialitate(p.getMedic().getSpecialitate());
-        dto.setDataOra(p.getDataOra());
-        dto.setMotiv(p.getMotiv());
-        dto.setStatus(p.getStatus());
-        return dto;
     }
 }
